--- a/WCO_WEB/WCO/angular.json
+++ b/WCO_WEB/WCO/angular.json
@@ -62,6 +62,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "proxyConfig": "proxy.conf.json"
+          },
           "configurations": {
             "production": {
               "browserTarget": "WCO:build:production"
@@ -97,5 +100,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "03b3ad83-95b7-42e4-99ac-788a810eae53"
   }
 }
