--- a/WCO_API/WCO_Api/appsettings.json
+++ b/WCO_API/WCO_Api/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=MSI;database=WCODB;trusted_connection=true;"
+  }
 }
