--- a/WCO_WEB/WCO/angular.json
+++ b/WCO_WEB/WCO/angular.json
@@ -66,7 +66,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "proxyConfig": "proxy.conf.json"
+            "proxyConfig": "proxy.config.json"
           },
           "configurations": {
             "production": {
